--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                 <a class="nav-link"href="destination.html">Destination</a>
 
             </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"href="signup.html">signup</a>
+
+        </li>
 
             </ul>
             <form class="d-flex">
